# stdenv-tools

./: configure.ac  release.nix
src/: Makefile.am
src/absolute-include/: main.cxx
src/absolute-libtool/: main.cxx
src/absolute-pkgconfig/: main.cxx
src/common/: pkgconf.cxx  pkgconf.hxx
test/: Makefile.am
test/absolute-include/: main.cxx
test/absolute-libtool/: main.cxx
test/absolute-pkgconfig/: main.cxx
test/common/: main.cxx
