EXTRA_DIST = Catch
TESTS = test-common test-absolute-include test-absolute-libtool test-absolute-pkgconfig
check_PROGRAMS = test-common test-absolute-include test-absolute-libtool test-absolute-pkgconfig

test_common_SOURCES = common/main.cxx

test_absolute_include_SOURCES = absolute-include/main.cxx

test_absolute_libtool_SOURCES = absolute-libtool/main.cxx

test_absolute_pkgconfig_SOURCES = absolute-pkgconfig/main.cxx
